--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pandas = "^2.2.2"
 matplotlib = "^3.9.0"
 scikit-learn = "^1.5.0"
 loguru = "^0.7.2"
+notebook = "^7.2.1"
+six = "^1.16.0"
+xgboost = "^2.1.0"
 
 
 [build-system]
