--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
 name = "analoguesplit"
-version = "0.1.1"
+version = "0.1.2"
 description = "A Chemically Biased Parametric Data Splitting Method"
 authors = ["Manas Mahale <manas.mahale@bcp.edu.in>"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 rdkit = "^2024.3.1"
-numpy = "<2.0.0"
-pandas = "^2.2.2"
+numpy = "^2.1.2"
+pandas = "^2.2.3"
 matplotlib = "^3.9.0"
 scikit-learn = "^1.5.0"
 loguru = "^0.7.2"
